# quflow

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: 1. pipeline executable.py  2. live plotting.py  2. parallel polling.py  3. multi read aggregator.py  example_01_basic_pipeline.py  example_02_parallel_polling.py  example_03_generator_aggregation.py  example_04_custom_live_plot.py
src/quflow/: __init__.py
src/quflow/communications/: __init__.py  common.py
src/quflow/communications/channels/: __init__.py  channel.py  read_strategy.py  write_strategy.py
src/quflow/communications/storage/: __init__.py  base.py  multi_item.py  single_item.py
src/quflow/status/: __init__.py  status.py
src/quflow/tasks/: __init__.py  wrapper.py
src/quflow/tasks/base/: __init__.py  context.py  task.py
src/quflow/tasks/templates/: __init__.py  condition_polling_task.py  context_func_task.py  func_task.py  generator_func_task.py  generator_task.py  input_func_task.py  live_animation.py  output_func_task.py  polling_task.py  transform_func_task.py
src/quflow/tasks/utils/: __init__.py  empty_function.py
src/quflow/workflow/: __init__.py  dataflow_graph.py  graph_handler.py  workflow.py
src/quflow/workflow/dependency_graph/: __init__.py  dependency_graph.py  nodes_executor.py  sequencer.py
src/quflow/workflow/node/: __init__.py  node.py  parallel_node.py
tests/: conftest.py  test_channel.py  test_func_task.py  test_node.py  test_polling_task.py  test_workflow.py
