[project]
name = "quflow"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Uri Goldblatt", email = "uri.goldblatt@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.6",
    "rustworkx>=0.16.0",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
