[project]
name = "quflow"
version = "0.3.3"
description = "A Python framework for building and orchestrating data-processing pipelines"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Uri Goldblatt", email = "uri.goldblatt@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.6",
    "rustworkx>=0.16.0",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
